GNOME Bugzilla – Bug 753375
ggit_clone_options_free breaks compilation
Last modified: 2015-08-11 07:58:00 UTC
Created attachment 308931 [details] [review] patch to src/dialogs/gb-new-project-dialog.c ggit_clone_options_free is no more available in libgit2-glib. patch attached to use g_object_unref.
Did libgit2-glib also bump a version number? If we don't ensure a new libgit2-glib is used, people will have crashes anyway.
yes, they bumped version from v0.23.2 to v0.23.4. diff shows ggit_clone_options_free removed.
FetchOptions had not changed to an object. I pushed this patch with a few changes including the fetch options and a configure.ac bump for libgit2-glib. commit 870b2d2c41328092447540d4aae52c12ac1e1fcc