git: track libgit2/libgit2-glib ABI breakages

https://bugzilla.gnome.org/show_bug.cgi?id=753375